<resources>
    <string name="app_name">Books4Geeks</string>
    <string name="action_settings">Settings</string>
    <string name="drawer_barcode">Scan Barcode</string>
    <string name="drawer_search">Search Books</string>
    <string name="drawer_bestsellers">Bestsellers</string>
    <string name="drawer_to_read">To Read</string>
    <string name="drawer_reading">Reading</string>
    <string name="drawer_completed">Completed</string>
    <string name="drawer_about">About</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="book_cover_desc">Book Cover</string>
    <string name="book_author">Book Author</string>
    <string name="book_name">Book Name</string>
    <string name="description_error_icon">Error icon</string>
    <string name="error_message">Oops Something went wrong.\nPlease check your internet connection.</string>
    <string name="try_again">Try Again</string>
    <string name="detail_cover">Detail cover</string>
    <string name="detail_book_subtitle">by %1$s\n%2$s pages</string>
    <string name="detail_book_subtitle_author">by %1$s</string>
    <string name="detail_book_subtitle_pages">%1$s pages</string>
    <string name="detail_book_ratings">%1$s ratings</string>
    <string name="detail_book_publication_name">Publisher: %1$s</string>
    <string name="detail_book_publish_date">Publish date: %1$s</string>
    <string name="detail_book_publication_isbn">ISBN : %1$s</string>
    <string name="detail_fab_to_read">Want to Read</string>
    <string name="detail_fab_to_read_remove">Remove from \"To Read\"</string>
    <string name="detail_fab_reading">Currently Reading</string>
    <string name="detail_fab_reading_remove">Remove from \"Reading\"</string>
    <string name="detail_fab_finished">Mark as Finished</string>
    <string name="detail_fab_finished_remove">Remove from \"Finished\"</string>
    <string name="share">Share</string>
    <string name="search_books">Search books&#8230;</string>
    <string name="desc_no_result">No results found</string>
    <string name="action_share_subject">Check out %1$s</string>
    <string name="action_share_text">%1$s by %2$s\n%3$s</string>
    <string name="action_share_title">Share book&#8230;</string>
    <string name="category_msg">Click on category</string>
    <string name="desc_book">Book</string>
    <string name="no_book_found">No book found in the list</string>
    <string name="camera_permission_denied">Camera permission not granted</string>
    <string name="version_1_0">Version 1.0</string>
    <string name="about_made_by">Made by</string>
    <string name="about_name">Siddharthsinh Rana</string>
    <string name="feedback_email">Send Feedback</string>
    <string name="email">Send Email using&#8230;</string>
    <string name="email_error">Unable to send email</string>
    <string name="book_options">Book options</string>
    <string name="sort">Sort by</string>
    <string name="sort_by_title">Sort by Title</string>
    <string name="sort_author">Sort by Author</string>
    <string name="sort_by_rating">Sort by Rating</string>
    <string name="pref_category_title">App Data</string>
    <string name="pref_key_backup" translatable="false">backup_data</string>
    <string name="pref_title_backup">Backup Data</string>
    <string name="pref_sum_backup">Export to Storage</string>
    <string name="pref_key_restore">restore_data</string>
    <string name="pref_title_restore">Restore Data</string>
    <string name="pref_sum_restore">Import from Storage</string>
    <string name="backup_select">Select location&#8230;</string>
    <string name="backup_complete">Backup completed successfully</string>
    <string name="backup_failed">Error! Unable to save backup</string>
    <string name="restore_select">Select backup file&#8230;</string>
    <string name="restore_complete">Restore completed successfully</string>
    <string name="restore_failed">Error! Unable to restore backup</string>
    <string name="restore_invalid">The file you selected is invalid</string>
    <string name="banner_ad_unit_id">ca-app-pub-4231449519885336/4621303001</string>
    <string name="ad_app_id">ca-app-pub-4231449519885336~9191103404</string>
    <string name="ad_test_device_id">0CC5E42D8645FF9F085776DEA85D5281</string>
    <string name="search_ad_unit_id">ca-app-pub-4231449519885336/9278501807</string>
    <string name="detail_description">Description</string>
    <string name="appwidget_text">EXAMPLE</string>
    <string name="add_widget">Add widget</string>
    <string name="widget_empty_text">Please Wait &#8230;</string>
    <string name="widget_bar">Books \"To Read\"</string>
    <string name="detail_ranking">Ranking</string>
    <string name="detail_ranking_current">Current Rank : %1$s</string>
    <string name="detail_ranking_weeks">Weeks on List : %1$s</string>
    <string name="empty_view_text_widget">No books in To Read</string>
    <string name="app_icon">App Icon</string>
    <string name="publication">Publication</string>
    <string name="catalog_menu">Catalog menu</string>
    <string name="category_icon">Category Icon</string>
    <string name="widget_category_type">Widget Category type</string>

</resources>
