<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:id="@+id/group_search">
        <item android:id="@+id/item_barcode"
            android:title="@string/drawer_barcode"
            android:icon="@drawable/drawer_ic_barcode_scan"/>

        <item android:id="@+id/item_search"
            android:title="@string/drawer_search"
            android:icon="@drawable/drawer_ic_search"/>

        <item android:id="@+id/item_bestsellers"
            android:title="@string/drawer_bestsellers"
            android:icon="@drawable/drawer_ic_bestseller"/>
    </group>

    <group android:id="@+id/group_catalog">
        <item android:id="@+id/item_to_read"
            android:title="@string/drawer_to_read"
            android:icon="@drawable/drawer_ic_to_read"/>

        <item android:id="@+id/item_reading"
            android:title="@string/drawer_reading"
            android:icon="@drawable/drawer_ic_reading"/>

        <item android:id="@+id/item_completed"
            android:title="@string/drawer_completed"
            android:icon="@drawable/drawer_ic_completed"/>
    </group>

    <group android:id="@+id/group_info">
        <item android:id="@+id/item_settings"
            android:title="@string/action_settings"
            android:icon="@drawable/drawer_ic_settings"/>

        <item android:id="@+id/item_about"
            android:title="@string/drawer_about"
            android:icon="@drawable/drawer_ic_info"/>
    </group>

</menu>