<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:id="@+id/error_msg">
    
    <ImageView
        android:layout_width="@dimen/error_image_width"
        android:layout_height="wrap_content"
        android:src="@drawable/ic_error"
        android:contentDescription="@string/description_error_icon"/>
    
    <com.b4g.sid.books4geeks.CustomViews.sspRegular
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textSize="@dimen/text_large"
        android:gravity="center"
        android:text="@string/error_message"
        android:layout_marginTop="@dimen/dist_large"/>

    <com.b4g.sid.books4geeks.CustomViews.sspLight
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/try_again"
        android:clickable="true"
        android:text="@string/try_again"
        android:textSize="@dimen/text_xxlarge"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dist_large"
        android:background="?attr/selectableItemBackground"/>
    
</LinearLayout>