<?xml version="1.0" encoding="utf-8"?>
<com.github.clans.fab.FloatingActionMenu
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:id="@+id/fab_menu"
    android:layout_marginRight="@dimen/dist_large"
    android:layout_marginEnd="@dimen/dist_large"
    app:layout_behavior="com.b4g.sid.books4geeks.CustomViews.ScrollFAMBehavior"
    android:layout_gravity="bottom|end"
    app:menu_icon="@drawable/fab_add"
    app:menu_colorNormal="@color/colorAccent">

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_to_read"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/drawer_ic_to_read"
        app:fab_size="mini"
        app:fab_label="@string/detail_fab_to_read"
        app:fab_colorNormal="@color/fab_yellow"
        app:fab_colorPressed="@color/fab_yellow_dark" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_reading"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/drawer_ic_reading"
        app:fab_size="mini"
        app:fab_label="@string/detail_fab_reading"
        app:fab_colorNormal="@color/fab_blue"
        app:fab_colorPressed="@color/fab_blue_dark" />

    <com.github.clans.fab.FloatingActionButton
        android:id="@+id/fab_finished"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/drawer_ic_completed"
        app:fab_size="mini"
        app:fab_label="@string/detail_fab_finished"
        app:fab_colorNormal="@color/fab_purple"
        app:fab_colorPressed="@color/fab_purple_dark" />


</com.github.clans.fab.FloatingActionMenu>