<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:id="@+id/book_card">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <ImageView
            android:id="@+id/book_image"
            android:layout_width="@dimen/book_card_width"
            android:layout_height="@dimen/book_card_height"
            android:scaleType="centerCrop"
            android:src="@drawable/category_temp"
            android:layout_margin="@dimen/dist_medium"
            android:contentDescription="@string/book_cover_desc" />

        <com.b4g.sid.books4geeks.ui.CustomTextViews.sspBoldTextView
            android:id="@+id/book_title"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Book Title"
            android:layout_below="@id/book_image"
            android:textSize="@dimen/text_large"
            android:layout_marginLeft="@dimen/dist_large"
            android:layout_marginStart="@dimen/dist_large"
            android:layout_marginTop="@dimen/text_medium"
            android:layout_marginBottom="@dimen/dist_small"
            android:contentDescription="@string/book_name"/>

        <com.b4g.sid.books4geeks.ui.CustomTextViews.sspLight
            android:id="@+id/book_author"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/book_author"
            android:layout_below="@id/book_title"
            android:textSize="@dimen/text_medium"
            android:layout_marginLeft="@dimen/dist_large"
            android:layout_marginStart="@dimen/dist_large"/>


    </RelativeLayout>
    
    

</android.support.v7.widget.CardView>